# django-oauth2-authcodeflow

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OP.md  PUBLISH.md  Pipfile  README.md  leaks.toml  pyproject.toml  setup.cfg  setup.py
.gitlab/: linter-ci.yml  merge_changelogs  publish-ci.yml  python-ci.yml  secret-ci.yml  security-ci.yml  tag-ci.yml  type-checker-ci.yml  unit-tests-ci.yml
.poe/: linters.toml  project.toml  tests.toml
_CHANGELOGS/Added/: 16_user_logged_in_signal_doc_example.md  add_django_60_support.md  add_python_314_support.md  allow_to_force_to_not_ask_for_consent.md  django_5_1.md  drop_python_3.7_support_python_3.12_and_django_5.md  login_required.md  urls_for_pypi.md
_CHANGELOGS/Changed/: github_18_do_not_send_client_secret_with_pkce_by_default.md  gitlab_upgrade.md  logger_by_module_name.md  mypy_1.0.md  python-jose_security_update.md  python_313_django_52_compat.md  refresh_session_middleware_min_secs.md  upgrade_code_to_use_only_python_310_syntax.md  use_uv_and_ruff.md  utc_time.md
_CHANGELOGS/Fixed/: 10_redirect_after_total_logout_could_happen_with_a_get.md  Azure_Tenant_PKCE_Public_App.md  Final_fix_for_mysql_innodb_max_key.md  QE-625_allow_empty_client_secret.md  VIS-938_fix_timezone_awareness_for_token.md  azure_origin_header_without_spa.md  bearer_authentication_backend_bugfix.md  blacklist_expiration_bugfix.md  cache_based_view_clear_cache_fix.md  config_reload.md  fix_the_sometimes_missing_migration_by_explicitly.md  github_25_logout_when_using_model_backend.md  login_required_error_field.md  middleware_inheritance.md  migration_error_from_version_1_1_0.md  no_authenticate_on_no_auth_url_patterns.md  oauth2_middleware_mixin_user_not_exist_on_request.md  refresh_token_call_should_use_an_origin_header_in.md
_CHANGELOGS/Removed/: drop_python_38and_39_as_they_are_eol.md  pytz_removed.md
_CHANGELOGS/Security/: security_upgrades.md
oauth2_authcodeflow/: apps.py  auth.py  conf.py  constants.py  middleware.py  models.py  urls.py  utils.py  views.py
oauth2_authcodeflow/management/commands/: oidc_urls.py  purge_blacklisted_tokens.py
oauth2_authcodeflow/migrations/: 0001_initial.py  0002_auto_20210528_1422.py  0003_auto_20210528_1432.py  0004_alter_blacklistedtoken_id_and_more.py  0004_blacklistedtoken_constraint.py  0005_alter_blacklistedtoken.py  0006_alter_id_fields.py
src/oauth2_authcodeflow/: __init__.py  apps.py  auth.py  conf.py  constants.py  middleware.py  models.py  utils.py  views.py
src/oauth2_authcodeflow/management/commands/: oidc_urls.py  purge_blacklisted_tokens.py
src/oauth2_authcodeflow/migrations/: 0001_initial.py  0002_auto_20210528_1422.py  0004_alter_blacklistedtoken_id_and_more.py
test/: no_urls.py  settings.py  test_auth.py  test_conf.py  test_middleware.py  test_models.py  test_oidc_urls.py  test_purge_blacklisted_tokens.py  test_urls.py  test_utils.py  test_views.py  urls.py
