[project]
name = "django-oauth2-authcodeflow"
version = "1.4.0"
description = "Authenticate with any OpenId Connect/Oauth2 provider through authorization code flow. PKCE is also supported."
authors = [
  { name = "Cyrille Pontvieux", email = "cyrille@enialis.net" },
  { name = "Befog", email = "ofogelberg@gmail.com" },
  { name = "Eric Plaster", email = "plaster@gmail.com" },
  { name = "Gabriel Dugny", email = "gabriel.dugny@manomano.com" },
  { name = "Niko Tyni", email = "ntyni@cc.helsinki.fi" },
  { name = "Pinoatrome", email = "pinoatrome@users.noreply.github.com" },
  { name = "Samir Hachimi", email = "shachimi@systra.com" },
  { name = "Sebastian Annies", email = "Sebastian.Annies@gmail.com" },
]
maintainers = [
  { name = "Cyrille Pontvieux", email = "cyrille@enialis.net" },
]
license-files = ["LICENSE"]
license = "MIT"
readme = "README.md"
keywords = [
  "oauth2",
  "oidc",
  "openid",
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Topic :: Internet :: WWW/HTTP :: Session",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
  "django>=4.2",
  "python-jose[cryptography]>=3.3",
  "requests>=2.28",
]

[dependency-groups]
dev = [
  "freezegun",
  "pdbpp",
  "poethepoet",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-html",
  "ruff",
]
typing = [
  "django-types",
  "mypy",
  "types-cryptography",
  "types-python-jose",
  "types-requests",
]

[project.urls]
# https://github.com/pypi/warehouse/blob/main/warehouse/templates/packaging/detail.html#L20
"Repository" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow"
"Documentation" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow/-/blob/master/README.md"
"Bug Tracker" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow/-/issues"
"Merge Requests" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow/-/merge_requests"
"Changelog" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow/-/blob/master/CHANGELOG.md"
"Contributing" = "https://gitlab.com/snake_coders/django-oauth2-authcodeflow/-/blob/master/CONTRIBUTING.md"
"Github mirror" = "https://github.com/jrd/django-oauth2-authcodeflow"

[tool.uv]
default-groups = [
  "dev",
  "typing",
]

[tool.poe]
verbosity = -1
include = [
  ".poe/project.toml",
  ".poe/linters.toml",
  ".poe/tests.toml",
]

[tool.ruff]
line-length = 160
target-version = "py38"

[tool.ruff.lint]
preview = true
# https://docs.astral.sh/ruff/rules
select = [
  "F", # pyflake8
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "I", # isort
  "UP", # pyupgrade, avoid using deprecated syntax
  "B", # bugbear, avoid non-sense statements
  "COM", # commas
  "DTZ", # datetime timezone
  "PTH", # prefer pathlib
  "LOG", # logging
  "T100", # debugger
  "T201", # print
  "T203", # pprint
  "FIX", # lines with TODO, FIXME, XXX and HACK
  "Q001", "Q002", "Q004", # double quotes for multiline and pydoc + check for unnecessary escape
]
ignore = [
  "COM812", # conflict with ruff formatter
]
[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
force-single-line = true
relative-imports-order = "closest-to-furthest"
split-on-trailing-comma = false
[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#confval-exclude
exclude = [
  '/migrations/.*\.py$',
  '/tests/.*\.py$',
  '\.cache',
  '\.venv',
]
allow_redefinition = false
# plugins = ["mypy_django_plugin.main"]
# [tool.mypy.plugins.django-stubs]
# django_settings_module = "test.settings"

[tool.pytest.ini_options]
django_find_project = "false" # do not rely on manage.py file presence
pythonpath = "." # indicate the root path
django_debug_mode = "keep" # respect debug mode in test settings
DJANGO_SETTINGS_MODULE = "test.settings"
addopts = ["--cov"]
[tool.coverage.run]
source = ["oauth2_authcodeflow"]
omit = ["tests/*", "*/migrations/*", "*/__init__.py"]
branch = true
relative_files = true
[tool.coverage.report]
precision = 2
[tool.coverage.xml]
output = "reports/coverage.xml"
[tool.coverage.html]
directory = "reports/coverage"
title = "Django OAuth2 Auth Code Flow coverage"

[build-system]
# https://docs.astral.sh/uv/concepts/build-backend
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-root = ""
module-name = "oauth2_authcodeflow"
source-include = ["CONTRIBUTING.md", "CHANGELOG.md", "OP.md"]
