[metadata]
name = django-oauth2-authcodeflow
description = Authenticate with any OpenId Connect/Oauth2 provider through authorization code flow. PKCE is also supported.
version = attr: oauth2_authcodeflow.__version__
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = Cyrille Pontvieux
author_email = cpontvieux@systra.com
url = https://gitlab.com/systra/qeto/lib/django-oauth2-authcodeflow
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
keywords = oauth2 oidc openid

[options]
python_requires = >=3.7

[flake8]
max-line-length = 160
ignore =
    # allow breaking line before a binary operator and improve readability
    W503,
    # allow line break after binary operator
    W504
